refactor: resolve remaining sonarqube findings & fix transactional self-invocation